--- a/app/views/cards/_show.html.haml
+++ b/app/views/cards/_show.html.haml
@@ -1,10 +1,8 @@
-.card-group
-  .card-group__title
-    クレジットカード一覧
-  
-  .card-info
-    %br
-      **** **** **** 
-    = form_tag(delete_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
-      %input{ type: "hidden", name: "card_id", value: "" }
-      %button.btn_delate  削除する
+クレジットカード一覧
+- if @card.present?
+  = image_tag @card_src, width: '26', height: '20', alt: @card_brand
+  = "**** **** **** " + @card_information.last4
+  - exp_month = @card_information.exp_month.to_s
+  - exp_year = @card_information.exp_year.to_s.slice(2,3)
+  = exp_month + " / " + exp_year
+削除する
