--- a/app/views/users/_show_side.html.haml
+++ b/app/views/users/_show_side.html.haml
@@ -45,7 +45,7 @@
   .side-body__confing
     設定
     .side-body__confing__list
-      = link_to new_card_path, class: "list" do
+      = link_to "/cards/#{current_user.id}", class: "list" do
         %li
           支払い方法
           %p2
